--- a/burtis-wyant-style.css
+++ b/burtis-wyant-style.css
@@ -55,4 +55,8 @@
                  /*border-collapse: collapse;*/
                     
                 }
+
+                th, td { 
+                
+                }
             
